# aerial-robot-motion-planning

./: README.md
my_planner/global_planner/: CMakeLists.txt  package.xml
my_planner/global_planner/include/global_planner/: astar.h  global_planner.h
my_planner/global_planner/src/: astar.cpp  global_planner.cpp
my_planner/plan_manage/: CMakeLists.txt  package.xml
my_planner/plan_manage/launch/: simulator.xml  test_in_sim.xml
my_planner/test/: CMakeLists.txt  package.xml
my_planner/test/launch/: test_astar.launch
my_planner/test/src/: test_astar.cpp
my_planner/traj_optimization/: CMakeLists.txt  package.xml
realflight_modules/px4ctrl/src/: PX4CtrlFSM.cpp  controller.cpp  input.cpp  px4ctrl_node.cpp
